--- a/css/home.css
+++ b/css/home.css
@@ -48,7 +48,7 @@
   justify-content: space-between;
 }
 .dark-mode-icon,
-.darkmoonbg {
+.dark .darkmoonbg {
   background: url("../img/darkModeIcon.svg");
   background-repeat: no-repeat;
   background-position: center;
@@ -192,12 +192,11 @@
 .removeBook {
   width: 24px;
   height: 24px;
-  cursor: pointer;
+  text-decoration: none;
 }
 .readBook {
   background: url("../img/bookMarkReadIcon.svg");
   background-size: cover;
-  border: none;
 }
 .removeBook {
   background: url("../img/bookMarkRemoveIcon.svg");
@@ -213,6 +212,11 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
+}
+.books-box{
+  width: 100%;
+  display: flex;
+  margin-left: 12px;
 }
 .books-list {
   display: flex;
@@ -283,6 +287,7 @@
   color: #0d75ff;
 }
 .book-read {
+  display: block;
   width: 100%;
   padding: 10px 0px;
   font-family: "Rubik";
@@ -292,7 +297,8 @@
   color: #ffffff;
   background: #75828a;
   border-radius: 4px;
-  border: none;
+  text-decoration: none;
+  text-align: center;
 }
 
 .modall {
@@ -374,21 +380,32 @@ color: #58667E;
   display: none;
 }
 /* * dark mode: */
-/* .body-dark {
+.dark {
     background-color: rgba(37, 37, 37, 0.863);
      color: white;
+     transition: 0.5s;
   }
-.dark-bg-black {
+.dark .dark-bg-black {
   background-color: rgb(31, 30, 30);
+  transition: 0.5s;
 }
-.dark-input {
+.dark .dark-input {
   background-color: rgb(34, 32, 32);
   color: white;
+  transition: 0.5s;
 }
-.dark-box-sh {
+.dark .dark-box-sh {
   background-color: rgb(27, 27, 27);
   box-shadow: 0px 0px 2px rgba(153, 153, 153, 0.89);
+  transition: 0.5s;
 }
-.dark-color {
+.dark .dark-color {
   color: white;
-} */
+  transition: 0.5s;
+}
+.dark .darkmoonbg{
+  background: url('../img/darkModeIcon.svg');
+  background-repeat: no-repeat;
+  transition: 0.5s;
+}
+/* sadds */
